--- a/ejercicios.html
+++ b/ejercicios.html
@@ -25,10 +25,41 @@
                 <h3>Ejercicio 10: Suma de arrays</h3>
                 <p><strong>Problema:</strong> Dado dos arrays de igual longitud, devuelve un array con la suma de sus elementos en cada posición.</p>
                 <pre><code class="language-javascript">
-function sumarArrays(a, b) {
-    return a.map((val, i) => val + b[i]);
+/*
+Ejercicio 2: Suma de dos números
+
+Descripción: Pedir al usuario dos 
+números enteros y mostrar su suma.
+*/
+
+#include<iostream>
+using namespace std;
+int main(){
+	
+	//DEFINIR
+	
+	int num1;
+	int num2;
+	int resul;
+	
+	//ENTRADA
+	
+	cout<<"INGRESE PRIMER NUMERO ";
+	cin>>num1;
+	cout<<"INGRESE SEGUNDO NUMERO ";
+	cin>>num2;
+	
+	//PROCESO
+	
+	resul=num1+num2;
+	
+	//SALIDA
+	
+	cout<<"EL RESULTADO DE LA SUMA ES: "<<resul<<endl;
+	
+	
+	return 0;
 }
-console.log(sumarArrays([1, 2, 3], [4, 5, 6])); // [5, 7, 9]
                 </code></pre>
             </article>
             <article>
@@ -49,3 +80,4 @@ console.log(invertirCadena("Hola")); // "aloH"
 </body>
 
 </html>
+
